[project]
name = "mcp-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.24",
    "chromadb>=0.4.18",
    "fastapi>=0.104.0",
    "langchain>=0.0.267",
    "langchain-aws>=0.2.22",
    "langchain-community>=0.0.10",
    "langchain-core>=0.3.56",
    "pydantic>=2.4.2",
    "pymupdf>=1.23.7",
    "pypdf>=3.15.1",
    "uvicorn>=0.24.0",
]
